--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
     <!-- === NAVIGATION HEADER === -->
     <div class="nav-header">
-      <h1>🏠 Accueil</h1>
+      <h1>Accueil</h1>
       <nav class="nav-links">
         <a href="index.html" class="active">Accueil</a>
         <a href="formulaire.html">Formulaire</a>
@@ -193,7 +193,7 @@
     <!-- === HERO SECTION === -->
     <div class="card">
       <div class="hero">
-        <h1>🧩 Référencement de professionnels spécialisés TSA</h1>
+        <h1>Référencement de professionnels spécialisés TSA</h1>
         <p class="subtitle">Facilitez la mise en relation entre votre expertise et les familles qui en ont besoin</p>
         <a href="formulaire.html" class="cta-button">📝 Remplir le questionnaire</a>
       </div>
@@ -286,7 +286,7 @@
       </div>
 
       <div class="help-box">
-        <strong>💡 Des questions ?</strong><br>
+        <strong>Des questions ?</strong><br>
         • Sur le fonctionnement : consultez la <a href="faq.html">FAQ</a><br>
         • Sur vos données et le RGPD : voir nos <a href="mentions.html#confidentialite">mentions légales</a>
       </div>
