--- a/index.html
+++ b/index.html
@@ -280,7 +280,8 @@
           <div class="step-number">3</div>
           <div class="step-content">
             <h4>Validation et mise en ligne</h4>
-            <p>Votre profil est visible et les familles peuvent vous contacter selon vos critères via <a href="https://plateforme-lien.github.io/Test_part/index.html">Trouver un Professionnel</a>.</p>
+            <p>Votre profil est visible et les familles peuvent vous contacter selon vos critères via <a href="https://plateforme-lien.github.io/Test_part/index.html" target="_blank" rel="noopener noreferrer">Trouver un Professionnel</a>.</p>
+
           </div>
         </div>
       </div>
