--- a/faq.html
+++ b/faq.html
@@ -333,7 +333,7 @@
             <span>Comment les familles me contactent-elles ?</span>
           </p>
           <p class="faq-answer">
-            Les familles peuvent vous envoyer un message directement via une interface dédiée: <a href="https://plateforme-lien.github.io/Test_part/index.html">Trouver un Professionnel</a>. Vous recevrez leur message par email avec leur adresse de contact.
+            Les familles peuvent vous envoyer un message directement via une interface dédiée:  <a href="https://plateforme-lien.github.io/Test_part/index.html" target="_blank" rel="noopener noreferrer">Trouver un Professionnel</a>. Vous recevrez leur message par email avec leur adresse de contact.
           </p>
           <p class="faq-answer" style="margin-top:12px">
             Vous pouvez ensuite <strong>répondre directement par email</strong> à la famille (en cliquant sur "Répondre").
