--- a/faq.html
+++ b/faq.html
@@ -293,7 +293,7 @@
             <span>Pourquoi demandez-vous mon numéro SIRET ?</span>
           </p>
           <p class="faq-answer">
-            Le numéro SIRET permet de vérifier que vous êtes bien un professionnel en activité. C'est une garantie pour les familles.
+            Le numéro SIRET permet de vérifier que vous êtes bien un professionnel en activité. C'est une garantie pour les particuliers.
           </p>
           <p class="faq-answer" style="margin-top:12px">
             La vérification est automatique via l'API SIRET de l'État français. Seuls les professionnels avec un SIRET valide et actif sont visibles sur la plateforme.
@@ -330,13 +330,13 @@
 
         <div class="faq-item">
           <p class="faq-question">
-            <span>Comment les familles me contactent-elles ?</span>
+            <span>Comment les particuliers me contactent-elles ?</span>
           </p>
           <p class="faq-answer">
-            Les familles peuvent vous envoyer un message directement via une interface dédiée:  <a href="https://plateforme-lien.github.io/Test_part/index.html" target="_blank" rel="noopener noreferrer">Trouver un Professionnel</a>. Vous recevrez leur message par email avec leur adresse de contact.
+            Les particuliers peuvent vous envoyer un message directement via une interface dédiée:  <a href="https://plateforme-lien.github.io/Test_part/index.html" target="_blank" rel="noopener noreferrer">Trouver un Professionnel</a>. Vous recevrez leur message par email avec leur adresse de contact.
           </p>
           <p class="faq-answer" style="margin-top:12px">
-            Vous pouvez ensuite <strong>répondre directement par email</strong> à la famille (en cliquant sur "Répondre").
+            Vous pouvez ensuite <strong>répondre directement par email</strong> au particulier (en cliquant sur "Répondre").
           </p>
         </div>
 
@@ -352,7 +352,7 @@
             <li>Exemple : Si vous avez 3 places, vous recevrez maximum 6 messages/semaine</li>
           </ul>
           <p class="faq-answer" style="margin-top:12px">
-            Une fois la limite atteinte, les familles verront un message leur demandant de réessayer plus tard.
+            Une fois la limite atteinte, les particuliers verront un message leur demandant de réessayer plus tard.
           </p>
           <p class="faq-answer">
             Si vous avez choisi d'afficher vos informations de contact directement pour les particuliers, cette limite ne s'applique pas à vous. 
@@ -387,7 +387,7 @@
           </p>
           <ul class="faq-answer">
             <li>Vos données ne sont jamais vendues ou partagées à des tiers</li>
-            <li>Elles sont utilisées uniquement pour la mise en relation avec les familles</li>
+            <li>Elles sont utilisées uniquement pour la mise en relation avec les particuliers</li>
             <li>Vous pouvez modifier ou supprimer vos données à tout moment</li>
           </ul>
           <p class="faq-answer" style="margin-top:12px">
@@ -409,10 +409,10 @@
 
         <div class="faq-item">
           <p class="faq-question">
-            <span>Quelles informations sont visibles par les familles ?</span>
+            <span>Quelles informations sont visibles par les particuliers ?</span>
           </p>
           <p class="faq-answer">
-            Les familles voient uniquement :
+            Les particuliers voient uniquement :
           </p>
           <ul class="faq-answer">
             <li>Votre prénom et nom</li>
