--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     <div class="card">
       <div class="hero">
         <h1>Référencement de professionnels spécialisés TSA</h1>
-        <p class="subtitle">Facilitez la mise en relation entre votre expertise et les familles qui en ont besoin</p>
+        <p class="subtitle">Facilitez la mise en relation entre votre expertise et les particuliers qui en ont besoin</p>
         <a href="formulaire.html" class="cta-button">📝 Remplir le questionnaire</a>
       </div>
     </div>
@@ -235,7 +235,7 @@
     <!-- === À QUOI SERT LA PLATEFORME === -->
     <div class="card">
       <h2 style="margin:0 0 16px;font-size:22px;color:#0f1724;font-weight:700">À quoi sert cette plateforme ?</h2>
-      <p style="color:var(--muted);margin:0 0 24px;font-size:16px">Cette plateforme a pour objectif de <strong style="color:#0f1724">faciliter la mise en relation</strong> entre les professionnels TSA et les familles qui ont besoin de leur expertise.</p>
+      <p style="color:var(--muted);margin:0 0 24px;font-size:16px">Cette plateforme a pour objectif de <strong style="color:#0f1724">faciliter la mise en relation</strong> entre les professionnels TSA et les particuliers qui ont besoin de leur expertise.</p>
       
       <div class="features">
         <div class="feature">
@@ -247,7 +247,7 @@
         <div class="feature">
           <div class="feature-icon">🎯</div>
           <h3>Mise en relation facilitée</h3>
-          <p>Les familles vous trouvent directement selon vos critères : zone d'intervention, publics accompagnés et disponibilités. Fini les demandes hors de votre secteur.</p>
+          <p>Les particuliers vous trouvent directement selon vos critères : zone d'intervention, publics accompagnés et disponibilités. Fini les demandes hors de votre secteur.</p>
         </div>
         
         <div class="feature">
@@ -280,7 +280,7 @@
           <div class="step-number">3</div>
           <div class="step-content">
             <h4>Validation et mise en ligne</h4>
-            <p>Votre profil est visible et les familles peuvent vous contacter selon vos critères via <a href="https://plateforme-lien.github.io/Test_part/index.html" target="_blank" rel="noopener noreferrer">Trouver un Professionnel</a>.</p>
+            <p>Votre profil est visible et les particuliers peuvent vous contacter selon vos critères via <a href="https://plateforme-lien.github.io/Test_part/index.html" target="_blank" rel="noopener noreferrer">Trouver un Professionnel</a>.</p>
 
           </div>
         </div>
