--- a/index.html
+++ b/index.html
@@ -210,9 +210,7 @@
 
     <!-- === POUR QUI ? === -->
     <div class="card">
-      <h2 style="margin:0 0 16px;font-size:22px;color:#0f1724;font-weight:700;text-align:center">Professionnels concernés</h2>
-      <p style="text-align:center;color:var(--muted);margin:0 0 24px">Cette plateforme est destinée aux professionnels suivants :</p>
-      
+      <h2 style="margin:0 0 16px;font-size:22px;color:#0f1724;font-weight:700;text-align:center">Cette plateforme est destinée aux professionnels suivants </h2>      
       <div style="display:grid;grid-template-columns:repeat(auto-fit, minmax(200px, 1fr));gap:16px;justify-items:center">
         <div style="background:var(--section-bg);padding:20px 16px;border-radius:8px;width:100%;text-align:center">
           <strong style="color:#0f1724">Éducateurs spécialisés</strong>
