--- a/mentions.html
+++ b/mentions.html
@@ -262,7 +262,7 @@
         <p>Les données collectées sont utilisées exclusivement pour les finalités suivantes :</p>
         <ul>
           <li>Permettre le référencement des professionnels sur la plateforme</li>
-          <li>Faciliter la mise en relation entre professionnels et familles</li>
+          <li>Faciliter la mise en relation entre professionnels et particuliers</li>
           <li>Gérer les demandes de modification ou suppression de données</li>
           <li>Envoyer des codes de vérification par e-mail pour sécuriser l'accès</li>
         </ul>
@@ -282,7 +282,7 @@
         <h3>3.5. Destinataires des données</h3>
         <p>Les données sont accessibles :</p>
         <ul>
-          <li>Aux familles consultant la plateforme pour trouver un professionnel</li>
+          <li>Aux particuliers consultant la plateforme pour trouver un professionnel</li>
           <li>Aux administrateurs de la plateforme pour la gestion technique</li>
           <li>Le cas échéant, aux sous-traitants techniques (hébergeur, service d'envoi d'e-mails) sous strictes conditions de confidentialité</li>
         </ul>
