--- a/index.html
+++ b/index.html
@@ -32,8 +32,23 @@
   }
 
   /* === Navigation Header === */
-  .nav-header{display:flex;justify-content:space-between;align-items:center;margin-bottom:32px;padding-bottom:16px;border-bottom:2px solid #e6eef6;}
-  .nav-header h1{margin:0;font-size:22px;color:#0f1724;}
+.nav-header{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  margin-bottom:32px;
+  padding:16px 0;
+  border-bottom:2px solid #e6eef6;
+  position:sticky;
+  top:0;
+  background:var(--bg);
+  z-index:1000;
+  margin-left:-36px;
+  margin-right:-36px;
+  padding-left:36px;
+  padding-right:36px;
+} 
+.nav-header h1{margin:0;font-size:22px;color:#0f1724;}
 
   .nav-links{display:flex;gap:8px;align-items:center;}
   .nav-links a{color:var(--muted);text-decoration:none;font-size:14px;font-weight:600;padding:8px 16px;border-radius:8px;transition:all 0.2s;position:relative;}
