--- a/mentions.html
+++ b/mentions.html
@@ -32,13 +32,22 @@
   }
   
   .nav-header{
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    margin-bottom:32px;
-    padding-bottom:16px;
-    border-bottom:2px solid #e6eef6;
-  }
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  margin-bottom:32px;
+  padding:16px 0;
+  border-bottom:2px solid #e6eef6;
+  position:sticky;
+  top:0;
+  background:var(--bg);
+  z-index:1000;
+  margin-left:-36px;
+  margin-right:-36px;
+  padding-left:36px;
+  padding-right:36px;
+} 
+  
   .nav-header h1{margin:0;font-size:22px;color:#0f1724;}
   
   .nav-links{display:flex;gap:8px;align-items:center;}
