--- a/formulaire.html
+++ b/formulaire.html
@@ -289,7 +289,7 @@
     <div id="headerTexts">
       <h2>Complétez vos informations professionnelles pour être référencé sur la plateforme</h2>
       <div class="info-box">
-        <strong>⏱️ Temps estimé :</strong> 5 minutes maximum
+        <strong>⏱️ Temps estimé :</strong> 5 à 10 minutes maximum
       </div>
     </div>
 
