--- a/faq.html
+++ b/faq.html
@@ -351,7 +351,8 @@
             <span>Comment les particuliers me contactent-elles ?</span>
           </p>
           <p class="faq-answer">
-            Les particuliers peuvent vous envoyer un message directement via une interface dédiée:  <a href="https://plateforme-lien.github.io/Test_part/index.html" target="_blank" rel="noopener noreferrer">Trouver un Professionnel</a>. Vous recevrez leur message par email avec leur adresse de contact.
+            Les particuliers peuvent vous envoyer un message directement via une interface dédiée:  <a href="https://plateforme-lien.github.io/Test_part/index.html" target="_blank" rel="noopener noreferrer" style="color:var(--primary);font-weight:600">Trouver un Professionnel</a>.
+            Vous recevrez leur message par email avec leur adresse de contact.
           </p>
           <p class="faq-answer" style="margin-top:12px">
             Vous pouvez ensuite <strong>répondre directement par email</strong> au particulier (en cliquant sur "Répondre").
