--- a/faq.html
+++ b/faq.html
@@ -274,6 +274,7 @@
           </ul>
           <p class="faq-answer" style="margin-top:12px">
             La plateforme calcule automatiquement les communes couvertes en fonction de votre temps de trajet ou rayon.
+            Attention, cela reste approximatif. Pour être plus précis, vous pouvez ajouter ou supprimer manuellement des communes à cette liste.
           </p>
         </div>
 
