--- a/faq.html
+++ b/faq.html
@@ -351,15 +351,14 @@
 
         <div class="faq-item">
           <p class="faq-question">
-            <span>Comment les particuliers me contactent-elles ?</span>
+            <span>Comment les particuliers me contactent-ils ?</span>
           </p>
           <p class="faq-answer">
-            Les particuliers peuvent vous envoyer un message directement via une interface dédiée:  <a href="https://plateforme-lien.github.io/Test_part/index.html" target="_blank" rel="noopener noreferrer" style="color:var(--primary);font-weight:600">Trouver un Professionnel</a>.
-            Vous recevrez leur message par email avec leur adresse de contact.
-          </p>
-          <p class="faq-answer" style="margin-top:12px">
-            Vous pouvez ensuite <strong>répondre directement par email</strong> au particulier (en cliquant sur "Répondre").
-          </p>
+            Les particuliers peuvent vous contacter via une interface dédiée:  <a href="https://plateforme-lien.github.io/Test_part/index.html" target="_blank" rel="noopener noreferrer" style="color:var(--primary);font-weight:600">Trouver un Professionnel</a>.
+            Vous avez le choix de laisser vos coordonnées visibles par les particuliers ou bien d'être contacter via un formulaire de contact.
+            Dans ce cas, vous recevrez leur message par email avec leur adresse de contact. 
+            Vous pouvez ensuite <strong>répondre directement par email</strong> au particulier, en cliquant sur "Répondre";.
+          </p>   
         </div>
 
         <div class="faq-item">
@@ -377,7 +376,7 @@
             Une fois la limite atteinte, les particuliers verront un message leur demandant de réessayer plus tard.
           </p>
           <p class="faq-answer">
-            Si vous avez choisi d'afficher vos informations de contact directement pour les particuliers, cette limite ne s'applique pas à vous. 
+            <strong>Si vous avez choisi d'afficher vos informations de contact directement pour les particuliers, cette limite ne s'applique pas à vous.</strong> 
           </p>
         </div>
 
@@ -389,9 +388,9 @@
             Si vous êtes saturé de demandes :
           </p>
           <ul class="faq-answer">
-            <li>Mettez à jour vos disponibilités </li>
+            <li>Mettez à jour vos disponibilités : si vous mettez que vous n'êtes plus disponible, vous ne serez plus visibles sur l'interface des particuliers </li>
             <li>Réduisez le nombre de places disponibles</li>
-            <li>Actualiser vos informations où vous pouvez choisir de ne pas laisser votre mail visible et d'être contacté par formulaire</li>
+            <li>Choisissez plutôt le contact via le formulaire</li>
           </ul>
         </div>
       </div>
@@ -409,8 +408,9 @@
           </p>
           <ul class="faq-answer">
             <li>Vos données ne sont jamais vendues ou partagées à des tiers</li>
-            <li>Elles sont utilisées uniquement pour la mise en relation avec les particuliers</li>
+            <li>Elles sont utilisées pour la mise en relation avec les particuliers</li>
             <li>Vous pouvez modifier ou supprimer vos données à tout moment</li>
+            <li>Des statistiques anonymisées sont récoltées tous les mois pour suivre l'écolution de la plateforme et identifier de potentiels besoins</li>
           </ul>
           <p class="faq-answer" style="margin-top:12px">
             Pour plus de détails : <a href="mentions.html#confidentialite" style="color:var(--primary);font-weight:600">Politique de confidentialité</a>
@@ -425,7 +425,7 @@
             Vos données professionnelles (nom, prénom, email, profession, zone d'intervention, disponibilités) sont conservées tant que vous êtes inscrit sur la plateforme.
           </p>
            <p class="faq-answer">
-            Si vous n'avez aucune activité pendant 2 ans, vos données sont supprimées.
+            Si vous n'avez aucune activité pendant 2 ans, vos données sont supprimées automatiquement.
           </p>
         </div>
 
@@ -434,15 +434,15 @@
             <span>Quelles informations sont visibles par les particuliers ?</span>
           </p>
           <p class="faq-answer">
-            Les particuliers voient uniquement :
+            Les particuliers voient :
           </p>
           <ul class="faq-answer">
             <li>Votre prénom et nom</li>
             <li>Votre profession</li>
             <li>Les publics que vous accompagnez (tranches d'âge)</li>
-            <li>Votre zone d'intervention (communes)</li>
             <li>Vos disponibilités</li>
             <li>Votre mode de contact (si renseigné)</li>
+            <li>Et si vous intervenez dans leur zone</li>
           </ul>
         </div>
       </div>
@@ -462,7 +462,6 @@
             <li>Vérifiez que tous les champs obligatoires (*) sont remplis</li>
             <li>Vérifiez votre connexion internet</li>
             <li>Essayez avec un autre navigateur (Chrome, Firefox, Safari)</li>
-            <li>Videz le cache de votre navigateur</li>
           </ul>
         </div>
 
@@ -481,6 +480,12 @@
         </div>
       </div>
     </div>
+        
+        <div class="faq-category">
+        <h2 data-number="6">Ajout</h2>
+          <p> Quoi faire si comportements innapropriés....</p>
+              </div>
+
 
     <!-- BESOIN D'AIDE -->
     <div class="card">
