--- a/faq.html
+++ b/faq.html
@@ -482,8 +482,10 @@
     </div>
         
         <div class="faq-category">
-        <h2 data-number="6">Ajout</h2>
-          <p> Quoi faire si comportements innapropriés....</p>
+        <h2 data-number="8">Ajout</h2>
+                    <p class="faq-answer">
+                      Comment protéger des comportements graves innapropriés
+                    </p>
               </div>
 
 
