--- a/faq.html
+++ b/faq.html
@@ -20,7 +20,7 @@
     margin:0;
     padding:24px;
     line-height:1.6;
-    font-size: 14px; 
+    font-size: 16px; 
   }
 
   .wrap{max-width:980px;margin:18px auto}
@@ -67,7 +67,7 @@
   .faq-item:last-child{border-bottom:none;}
   .faq-question{font-weight:700;font-size:18px;color:var(--primary);margin:0 0 12px;display:block;}
   
-  .faq-answer{color:#0f1724;font-size:15px;margin:0;line-height:1.6;text-align:justify;hyphens:auto;/*max-width:750px;*/}
+  .faq-answer{color:#0f1724;font-size:16px;margin:0;line-height:1.6;text-align:justify;hyphens:auto;/*max-width:750px;*/}
   .faq-answer ul{margin:12px 0;padding-left:20px;}
   .faq-answer li{margin:8px 0;}
 
@@ -77,12 +77,12 @@
     border-radius:8px;
     border-left:4px solid #ffc107;
     margin:12px 0;
-    font-size:14px; /* Ajouter cette ligne - texte plus petit */
-    line-height:1.5; /* Ajouter pour un meilleur espacement */
+    font-size:16px; 
+    line-height:1.5; 
   }
 
 .highlight strong{
-    font-size:14px; /* Garder la même taille pour le gras */
+    font-size:15px; /* Garder la même taille pour le gras */
 }
 
 .highlight p{
