--- a/faq.html
+++ b/faq.html
@@ -375,7 +375,7 @@
           <p class="faq-answer" style="margin-top:12px">
             Une fois la limite atteinte, les particuliers verront un message leur demandant de réessayer plus tard.
           </p>
-          <p class="faq-answer">
+          <p class="faq-answer" style="margin-top:12px">
             <strong>Si vous avez choisi d'afficher vos informations de contact directement pour les particuliers, cette limite ne s'applique pas à vous.</strong> 
           </p>
         </div>
