--- a/mentions.html
+++ b/mentions.html
@@ -20,6 +20,7 @@
     margin:0;
     padding:24px;
     line-height:1.6;
+    font-size:16px;
   }
 
   .wrap{max-width:980px;margin:18px auto}
@@ -114,12 +115,14 @@
     font-size:15px;
     text-align:justify;
     hyphens:auto;
+    font-size:16px; 
   }
   
   ul,ol{
     margin:0 0 16px;
     padding-left:24px;
     color:#0f1724;
+    font-size:16px;
   }
   li{
     margin:8px 0;
