--- a/mentions.html
+++ b/mentions.html
@@ -264,7 +264,7 @@
         <p>Nous conservons temporairement :</p>
         <ul>
           <li>Le nom et l'email du particulier</li>
-          <li>Son message</li>
+          <li>Le début de son message</li>
           <li>La date</li>
         </ul>
         <p><strong>Pourquoi ?</strong> Pour éviter le spam et la saturation de votre boîte mail (limite : 1 message par particulier toutes les 24h, et limite hebdomadaire selon vos places disponibles).</p>
