--- a/faq.html
+++ b/faq.html
@@ -166,7 +166,7 @@
             <li>Vérifier que l'email est valide et que vous en êtes bien le propriétaire</li>
             <li>Éviter les inscriptions frauduleuses</li>
           </ul>
-          <p class="faq-answer">Le code est valable <strong>15 minutes</strong>. Si vous ne l'avez pas reçu, vérifiez vos spams.</p>
+          <p class="faq-answer">Le code est valable <strong>15 minutes</strong>.</p>
         </div>
 
         <div class="faq-item">
@@ -188,7 +188,7 @@
 
         <div class="faq-item">
           <p class="faq-question">
-            <span>Puis-je m'inscrire si je n'exerce pas dans le Grand Est ?</span>
+            <span>Puis-je m'inscrire si je n'exerce pas dans les départements de la zone de test ?</span>
           </p>
           <p class="faq-answer">
             Oui ! Vous pouvez vous inscrire dès maintenant, mais la plateforme est actuellement en phase de déploiement sur les départements :
@@ -355,9 +355,9 @@
           </p>
           <p class="faq-answer">
             Les particuliers peuvent vous contacter via une interface dédiée:  <a href="https://plateforme-lien.github.io/Test_part/index.html" target="_blank" rel="noopener noreferrer" style="color:var(--primary);font-weight:600">Trouver un Professionnel</a>.
-            Vous avez le choix de laisser vos coordonnées visibles par les particuliers ou bien d'être contacter via un formulaire de contact.
+            Vous avez le choix de laisser vos coordonnées visibles pour les particuliers ou bien d'être contacter via un formulaire de contact.
             Dans ce cas, vous recevrez leur message par email avec leur adresse de contact. 
-            Vous pouvez ensuite <strong>répondre directement par email</strong> au particulier, en cliquant sur "Répondre";.
+            Vous pouvez ensuite <strong>répondre directement</strong> au particulier, en cliquant sur "Répondre";.
           </p>   
         </div>
 
@@ -366,11 +366,11 @@
             <span>Combien de messages puis-je recevoir ?</span>
           </p>
           <p class="faq-answer">
-            Pour éviter la saturation et si vous choissiez d'être contacter via un formulaire de contact, la plateforme limite le nombre de messages que vous recevez :
+            Pour éviter la saturation et si vous choissiez d'être contacté via un formulaire de contact, la plateforme limite le nombre de messages que vous recevez :
           </p>
           <ul class="faq-answer">
-            <li>Maximum = <strong>Nombre de places disponibles × 2</strong> par semaine</li>
-            <li>Exemple : Si vous avez 3 places, vous recevrez maximum 6 messages/semaine</li>
+            <li>Maximum = <strong>Nombre de places disponibles × 2</strong> sur 7 jours</li>
+            <li>Exemple : Si vous avez 3 places, vous recevrez maximum 6 messages/7 jours</li>
           </ul>
           <p class="faq-answer" style="margin-top:12px">
             Une fois la limite atteinte, les particuliers verront un message leur demandant de réessayer plus tard.
@@ -390,7 +390,7 @@
           <ul class="faq-answer">
             <li>Mettez à jour vos disponibilités : si vous mettez que vous n'êtes plus disponible, vous ne serez plus visibles sur l'interface des particuliers </li>
             <li>Réduisez le nombre de places disponibles</li>
-            <li>Choisissez plutôt le contact via le formulaire</li>
+            <li>Choisissez plutôt d'être contacté via le formulaire</li>
           </ul>
         </div>
       </div>
