--- a/formulaire.html
+++ b/formulaire.html
@@ -661,10 +661,19 @@ async function fetchWithErrorHandling(url, options = {}) {
   } catch (error) {
     console.error('Erreur fetch:', error);
     
+    // Messages adaptés selon le type d'erreur
+    if (error.name === 'AbortError' || error.message === 'NETWORK_ERROR') {
+      return { 
+        ok: false, 
+        error: 'CONNECTION_ERROR',
+        message: '🌐 Connexion impossible. Vérifiez votre connexion internet et réessayez dans quelques instants.'
+      };
+    }
+    
     return { 
       ok: false, 
-      error: 'NETWORK_ERROR',
-      message: '⚠️ Impossible de contacter le serveur. Vérifiez votre connexion et réessayez.'
+      error: 'UNKNOWN_ERROR',
+      message: '⚠️ Une erreur temporaire est survenue. Veuillez réessayer dans quelques minutes.'
     };
   }
 }
@@ -690,6 +699,64 @@ const codeArea = document.getElementById("codeArea");
 const codeEl = document.getElementById("code");
 const verifyBtn = document.getElementById("verifyBtn");
 const resendBtn = document.getElementById("resendBtn");
+  resendBtn.addEventListener("click", async () => {
+  const mail = (emailEl.value || "").trim().toLowerCase();
+  
+  if (!mail) {
+    codeMsg.textContent = "⚠️ Email requis";
+    return;
+  }
+  
+  // Désactiver le bouton pendant l'envoi
+  resendBtn.disabled = true;
+  resendBtn.textContent = "⏳ Envoi...";
+  codeMsg.textContent = "Envoi du nouveau code...";
+  
+  const result = await fetchWithErrorHandling(
+    `${SCRIPT_URL}?action=sendCode&email=${encodeURIComponent(mail)}&_t=${Date.now()}`
+  );
+  
+  resendBtn.disabled = false;
+  resendBtn.textContent = "Renvoyer";
+  
+  if (!result.ok) {
+    codeMsg.innerHTML = `<span style="color:#dc2626;font-weight:600">${result.message}</span>`;
+    return;
+  }
+  
+  const j = result.data;
+  
+  if (j.error === "DAILY_LIMIT_REACHED") {
+  emailMsg.innerHTML = `<span style="color:#dc2626;font-weight:600">❌ Limite quotidienne atteinte</span><br><span style="color:#6b7280;font-size:13px">Vous avez demandé 3 codes aujourd'hui. Réessayez demain.</span>`;
+  sendCodeBtn.disabled = false;
+  return;
+}
+
+if (j.error === "SERVICE_QUOTA_EXCEEDED") {
+  emailMsg.innerHTML = `<span style="color:#f59e0b;font-weight:600">⚠️ Service temporairement saturé</span><br><span style="color:#6b7280;font-size:13px">Trop de demandes aujourd'hui. Réessayez demain.</span>`;
+  sendCodeBtn.disabled = false;
+  return;
+}
+
+if (j.error === "EMAIL_INVALIDE") {
+  emailMsg.innerHTML = `<span style="color:#dc2626;font-weight:600">❌ ${j.message || 'Email invalide'}</span>`;
+  sendCodeBtn.disabled = false;
+  return;
+}
+  
+  if (j.error === "COOLDOWN_ACTIVE") {
+    codeMsg.innerHTML = `<span style="color:#f59e0b;font-weight:600">⏱️ ${j.message}</span>`;
+    return;
+  }
+  
+  if (j.ok) {
+    codeMsg.innerHTML = `<span style="color:#059669;font-weight:600">✅ Nouveau code envoyé !</span>`;
+    codeEl.value = "";
+    codeEl.focus();
+  } else {
+    codeMsg.innerHTML = `<span style="color:#dc2626">❌ Erreur : ${j.error || "Impossible d'envoyer"}</span>`;
+  }
+});
 const codeMsg = document.getElementById("codeMsg");
 const formEl = document.getElementById("form");
 const siretBlock = document.getElementById("siretBlock");
