--- a/mentions.html
+++ b/mentions.html
@@ -34,7 +34,7 @@
   
   .nav-header{
   display:flex;
-  justify-content:center;
+  justify-content:space-between;
   align-items:center;
   margin-bottom:32px;
   padding:16px 0;
